--- a/P4.ipynb
+++ b/P4.ipynb
@@ -12,9 +12,9 @@
     "\n",
     "---\n",
     "\n",
-    "* Estudiante: **Nombre completo**\n",
-    "* Carné: **B12345**\n",
-    "* Grupo: **1/2**\n",
+    "* Estudiante: **Adrián Cordero Méndez**\n",
+    "* Carné: **B82305**\n",
+    "* Grupo: **1**\n",
     "\n",
     "---\n",
     "# `P4` - *Modulación digital IQ*\n",
